force-app/main/default/objects/Incident__c/fields/Complete_By__c.field-meta.xml
<CustomField>
    <fullName>Complete_By__c</fullName>
    <label>Complete By</label>
    <type>DateTime</type>
</CustomField>