force-app/main/default/objects/Incident__c/fields/Concerned_Issue__c.field-meta.xml
<CustomField>
    <fullName>Concerned_Issue__c</fullName>
    <label>Concerned Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fuel Check</fullName>
            </value>
            <value>
                <fullName>Oil level Check</fullName>
            </value>
            <value>
                <fullName>Tires and Brake</fullName>
            </value>
            <value>
                <fullName>Instruments Functional</fullName>
            </value>
            <value>
                <fullName>Emergency Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>