force-app/main/default/objects/Incident__c/fields/Describe_Incident__c.field-meta.xml
<CustomField>
    <fullName>Describe_Incident__c</fullName>
    <label>Describe Incident</label>
    <type>TextArea</type>
</CustomField>