force-app/main/default/objects/Incident__c/fields/Layout_Pick__c.field-meta.xml
<CustomField>
    <fullName>Layout_Pick__c</fullName>
    <label>Layout Pick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Flight</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>