force-app/main/default/objects/Incident__c/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance</label>
    <referenceTo>Maintenance__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>