force-app/main/default/objects/Incident__c/fields/Pre_Flight_Task__c.field-meta.xml
<CustomField>
    <fullName>Pre_Flight_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Flight Task</label>
    <referenceTo>Pre_Flight_Task__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>