force-app/main/default/objects/Incident__c/fields/Root_cause_analysis__c.field-meta.xml
<CustomField>
    <fullName>Root_cause_analysis__c</fullName>
    <label>Root cause analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>