force-app/main/default/objects/Incident__c/recordTypes/maintenance_Incident.recordType-meta.xml
<RecordType>
    <fullName>maintenance_Incident</fullName>
    <active>true</active>
    <label>maintenance Incident</label>
</RecordType>