force-app/main/default/objects/Incident__c/recordTypes/Pre_Flight.recordType-meta.xml
<RecordType>
    <fullName>Pre_Flight</fullName>
    <active>true</active>
    <description>This is primarily used to capture pre-flight incidents</description>
    <label>Pre Flight</label>
</RecordType>