force-app/main/default/objects/Incident__c/recordTypes/Pre_Flight_Incident.recordType-meta.xml
<RecordType>
    <fullName>Pre_Flight_Incident</fullName>
    <active>true</active>
    <label>Pre Flight Incident</label>
</RecordType>